--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -6,8 +6,12 @@ $assets: '../../src/assets';
 @import './vendor/_normalize.scss';
 @import './mixins/_mixins.scss';
 
+// Icons
+@import './icons/icon-fonts.scss';
+
 // Theme
 @import './variables/_theme.scss';
 
 // Partials
 @import './partials/_landing.scss';
+@import './partials/_navigation.scss';
