--- a/src/sass/partials/_landing.scss
+++ b/src/sass/partials/_landing.scss
@@ -1,4 +1,4 @@
-.wrapper {
+.wrapper-landing {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -19,7 +19,7 @@
     filter: blur(10px);
     z-index: -1;
   }
-  .content {
+  .content-landing {
     flex-basis: 500px;
     display: flex;
     flex-direction: column;
