--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -12,3 +12,4 @@ $assets: '../../src/assets';
 // Partials
 @import './partials/_landing.scss';
 @import './partials/_navigation.scss';
+@import './partials/_index.scss';
