--- a/src/css/app.css
+++ b/src/css/app.css
@@ -661,4 +661,85 @@ nav .user img {
   width: 50px;
   margin-left: 1em;
 }
+
+main {
+  background: url(../../src/assets/bg_main.png) no-repeat center;
+  background-size: cover;
+  height: calc(100vh - 4.35em);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+main section {
+  -webkit-box-flex: 2.5;
+      -ms-flex: 2.5;
+          flex: 2.5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: calc(100vh - 4.35em);
+  background-color: rgba(221, 161, 221, 0.15);
+}
+
+main section .top, main section .bottom {
+  position: relative;
+  height: 50%;
+}
+
+main section .top .controls, main section .bottom .controls {
+  height: 10%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-color: rgba(204, 204, 204, 0.15);
+}
+
+main section .top {
+  background-color: rgba(94, 219, 188, 0.15);
+}
+
+main section .bottom {
+  background-color: rgba(154, 214, 41, 0.15);
+}
+
+main section:nth-child(2) {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: rgba(36, 75, 221, 0.15);
+}
+
+main section:nth-child(2) .discount {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin: 0 .5em;
+  margin-top: .5em;
+  padding: .5em;
+  background-color: rgba(221, 36, 107, 0.15);
+}
+
+main section:nth-child(2) .info, main section:nth-child(2) .bot-filters, main section:nth-child(2) .commision {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0 .5em;
+  margin-top: .5em;
+  padding: .5em;
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+  background-color: rgba(42, 221, 36, 0.15);
+}
+
+main section:nth-child(2) div:last-child {
+  margin-bottom: .5em;
+}
 /*# sourceMappingURL=app.css.map */
