--- a/src/css/app.css
+++ b/src/css/app.css
@@ -48,7 +48,12 @@ section {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 100;
 }
 
@@ -89,6 +94,8 @@ hr {
   /* 1 */
   overflow: visible;
   /* 2 */
+  margin: 0;
+  margin-top: 1em;
 }
 
 /**
@@ -113,8 +120,14 @@ a {
   /* 1 */
   -webkit-text-decoration-skip: objects;
   /* 2 */
-  color: #9c1d1a;
+  color: #bd5f59;
   text-decoration: none;
+  -webkit-transition: color .25s ease;
+  transition: color .25s ease;
+}
+
+a:hover {
+  color: #e9e9e9;
 }
 
 /**
@@ -186,7 +199,8 @@ small {
  * Prevent `sub` and `sup` elements from affecting the line height in
  * all browsers.
  */
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -314,7 +328,64 @@ button:-moz-focusring,
  * Correct the padding in Firefox.
  */
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 1.5em;
+  margin: 0;
+  padding: 0;
+  border: none;
+  text-transform: capitalize;
+  font-weight: inherit;
+  font-size: inherit;
+  text-align: justify;
+  position: relative;
+}
+
+fieldset > label {
+  font-size: .8em;
+  letter-spacing: .1em;
+}
+
+fieldset > select,
+fieldset > input {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: absolute;
+  right: 0;
+  height: 100%;
+}
+
+fieldset > input {
+  background-color: inherit;
+  border: none;
+}
+
+fieldset > select {
+  padding-right: 2em;
+  font-size: .8em;
+  letter-spacing: .1em;
+  width: auto;
+  background-color: inherit;
+  border: none;
+  color: inherit;
+  font-family: inherit;
+  outline: none;
+  -webkit-appearance: none;
+  text-align-last: right;
+}
+
+fieldset > select > option {
+  background-color: #4f4f4f;
+  color: inherit;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+fieldset > .icon-down {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
 }
 
 /**
@@ -461,7 +532,7 @@ ul {
 }
 
 .button-block {
-  background-color: #5a110f;
+  background-color: #351715;
   color: #e9e9e9;
   margin: 1em auto;
   padding: 1em 0;
@@ -477,9 +548,41 @@ ul {
 }
 
 .button-block:hover {
-  background-color: #0c0a09;
+  background-color: #0f0f0f;
   -webkit-box-shadow: 0px 0px 10px 0px rgba(75, 15, 15, 0.75);
           box-shadow: 0px 0px 10px 0px rgba(75, 15, 15, 0.75);
+}
+
+.button {
+  background-color: #5a2723;
+  color: #e9e9e9;
+  padding: 1em 3em;
+  text-transform: uppercase;
+  font-size: 85%;
+  border-radius: 4px;
+  -webkit-transition: all .25s ease;
+  transition: all .25s ease;
+  letter-spacing: .1em;
+}
+
+.button:hover {
+  background-color: #0f0f0f;
+  -webkit-box-shadow: 0px 0px 10px 0px rgba(75, 15, 15, 0.75);
+          box-shadow: 0px 0px 10px 0px rgba(75, 15, 15, 0.75);
+}
+
+.title {
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  margin: 0;
+  margin-bottom: 0.5em;
+  font-weight: 600;
+  font-size: .9em;
+}
+
+.title > span {
+  color: #bd5f59;
+  font-weight: 600;
 }
 
 .wrapper-landing {
@@ -536,7 +639,7 @@ ul {
 nav {
   height: 5em;
   position: relative;
-  background-color: #5a110f;
+  background-color: #351715;
   color: #e9e9e9;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -550,8 +653,14 @@ nav {
   padding: 0 5em;
   font-size: 13px;
   letter-spacing: .025em;
-  background: -webkit-gradient(linear, left top, right top, from(#2e0908), color-stop(40%, #9c1d1a), color-stop(60%, #9c1d1a), to(#2e0908));
-  background: linear-gradient(to right, #2e0908 0%, #9c1d1a 40%, #9c1d1a 60%, #2e0908 100%);
+  background: -webkit-gradient(linear, left top, right top, from(#100707), color-stop(40%, #7e3732), color-stop(60%, #7e3732), to(#100707));
+  background: linear-gradient(to right, #100707 0%, #7e3732 40%, #7e3732 60%, #100707 100%);
+}
+
+@media screen and (max-width: 900px) {
+  nav {
+    padding: 0 1.5em;
+  }
 }
 
 nav #toggle {
@@ -585,7 +694,8 @@ nav a img {
   margin-right: 1em;
 }
 
-nav .links, nav .user {
+nav .links,
+nav .user {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -598,7 +708,8 @@ nav .links, nav .user {
 }
 
 @media screen and (max-width: 900px) {
-  nav .links, nav .user {
+  nav .links,
+  nav .user {
     display: none;
   }
 }
@@ -611,8 +722,8 @@ nav .links {
 }
 
 nav .links li:nth-child(2) a {
-  border-right: 1px solid #0c0a09;
-  border-left: 1px solid #0c0a09;
+  border-right: 1px solid #5a2723;
+  border-left: 1px solid #5a2723;
 }
 
 nav .links li {
@@ -621,13 +732,12 @@ nav .links li {
 
 nav .links li a {
   padding: 1em;
-  color: #2e0908;
   -webkit-transition: color .25s ease;
   transition: color .25s ease;
 }
 
 nav .links li a:hover {
-  color: #e9e9e9;
+  color: #351715;
 }
 
 nav .user {
@@ -671,10 +781,18 @@ main {
   display: flex;
 }
 
+@media screen and (max-width: 900px) {
+  main {
+    display: block;
+  }
+}
+
 main section {
-  -webkit-box-flex: 2.5;
-      -ms-flex: 2.5;
-          flex: 2.5;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -682,64 +800,138 @@ main section {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: calc(100vh - 4.35em);
-  background-color: rgba(221, 161, 221, 0.15);
+  height: calc(100vh - 4.75em);
+  background-color: rgba(15, 15, 15, 0.4);
 }
 
-main section .top, main section .bottom {
+main section .top,
+main section .bottom {
   position: relative;
   height: 50%;
 }
 
-main section .top .controls, main section .bottom .controls {
-  height: 10%;
+main section .top .controls,
+main section .bottom .controls {
+  font-size: 80%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  height: 15%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0 1em;
   width: 100%;
   top: 0;
   left: 0;
   position: absolute;
-  background-color: rgba(204, 204, 204, 0.15);
+  background-color: rgba(79, 79, 79, 0.4);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
-main section .top {
-  background-color: rgba(94, 219, 188, 0.15);
+main section .top .controls a,
+main section .bottom .controls a {
+  font-size: 100%;
 }
 
-main section .bottom {
-  background-color: rgba(154, 214, 41, 0.15);
+@media screen and (max-width: 900px) {
+  main section .top .controls,
+  main section .bottom .controls {
+    height: 20%;
+    padding: 0 1.5em;
+  }
 }
 
 main section:nth-child(2) {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  font-size: 14px;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  background-color: rgba(36, 75, 221, 0.15);
+  z-index: 1;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: rgba(79, 79, 79, 0.4);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+@media screen and (max-width: 900px) {
+  main section:nth-child(2) {
+    height: 100vh;
+  }
 }
 
 main section:nth-child(2) .discount {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-size: 13px;
+  padding: 0 1em;
+  padding-top: 1em;
+  text-align: center;
+}
+
+main section:nth-child(2) .info,
+main section:nth-child(2) .bot-filters,
+main section:nth-child(2) .commision {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 1em;
+  padding-top: 1em;
+  text-align: center;
+}
+
+main section:nth-child(2) .info .title:nth-of-type(even),
+main section:nth-child(2) .bot-filters .title:nth-of-type(even),
+main section:nth-child(2) .commision .title:nth-of-type(even) {
+  padding-top: 1em;
+}
+
+main section:nth-child(2) .info .commision-content,
+main section:nth-child(2) .bot-filters .commision-content,
+main section:nth-child(2) .commision .commision-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 0;
+}
+
+main section:nth-child(2) .info .commision-content > div,
+main section:nth-child(2) .bot-filters .commision-content > div,
+main section:nth-child(2) .commision .commision-content > div {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin: 0 .5em;
-  margin-top: .5em;
-  padding: .5em;
-  background-color: rgba(221, 36, 107, 0.15);
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  padding: .4em 0;
 }
 
-main section:nth-child(2) .info, main section:nth-child(2) .bot-filters, main section:nth-child(2) .commision {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0 .5em;
-  margin-top: .5em;
-  padding: .5em;
-  -webkit-box-flex: 3;
-      -ms-flex: 3;
-          flex: 3;
-  background-color: rgba(42, 221, 36, 0.15);
+main section:nth-child(2) .info .commision-content > div small,
+main section:nth-child(2) .bot-filters .commision-content > div small,
+main section:nth-child(2) .commision .commision-content > div small {
+  color: #bd5f59;
 }
 
 main section:nth-child(2) div:last-child {
-  margin-bottom: .5em;
+  padding-bottom: 1em;
+}
+
+main section:nth-child(3) .top .controls,
+main section:nth-child(3) .bottom .controls {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
 /*# sourceMappingURL=app.css.map */
