--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -3,8 +3,8 @@
   color: $color;
   padding: $padding $padding * 3;
   text-transform: uppercase;
-  font-size: 85%;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  font-size: 85%; // box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 4px;
   transition: all .25s ease;
   letter-spacing: .1em;
   &:hover {
@@ -12,6 +12,7 @@
     box-shadow: 0px 0px 10px 0px rgba(75, 15, 15, 0.75);
   }
 }
+
 @mixin button-block($color, $bg, $hover, $padding) {
   background-color: $bg;
   color: $color;
@@ -22,10 +23,23 @@
   transition: all .25s ease;
   letter-spacing: .1em;
   width: 100%;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
   border-radius: 4px;
   &:hover {
     background-color: $hover;
     box-shadow: 0px 0px 10px 0px rgba(75, 15, 15, 0.75);
+  }
+}
+
+@mixin title($color) {
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  margin: 0;
+  margin-bottom: 0.5em;
+  font-weight: 600;
+  font-size: .9em;
+  &>span {
+    color: $color;
+    font-weight: 600;
   }
 }
