--- a/src/sass/variables/_variables.scss
+++ b/src/sass/variables/_variables.scss
@@ -1,31 +1,33 @@
 /* COLORS */
+
 // Base colors
-$primary: #5a110f;
+$primary: #351715;
 $secondary: #1b0d19;
-$bg: #0c0a09;
-
+$bg: #0f0f0f;
 // Lightened
-$primary-light: lighten($primary, 15%);
+$primary-extra-light: lighten($primary, 40%);
+$primary-light: lighten($primary, 20%);
+$primary-medium: lighten($primary, 10%);
 $secondary-light: lighten($secondary, 20%);
-$bg-light: lighten($bg, 20%);
-
+$bg-light: lighten($bg, 25%);
 // Darkened
 $primary-dark: darken($primary, 10%);
 $secondary-dark: darken($secondary, 20%);
 $bg-dark: darken($bg, 20%);
-
 /* TYPOHRAPHY */
-// Fonts
-$heading: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
+// Fonts
+$heading: 'Segoe UI',
+Tahoma,
+Geneva,
+Verdana,
+sans-serif;
 // Weights
 $heading-weight: 100;
-
 // Base size
 $base-font-size: 15px;
-
 // Base color
 $text-base-color: #e9e9e9;
-
 /* BREAKPOINTS */
+
 $nav-break: 900px;
