--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -53,14 +53,15 @@ main {
       .controls {
         div {
           text-align: center;
-          padding-top: .5em;
+          // padding-top: .5em;
           select {
             font-size: 90%;
             padding: .5em 1em;            
           }
           .search {
               position: relative;
-              display: inline;
+              display: inline-block;
+              height: auto;
             input {
               padding: .5em 2em;
             }
@@ -76,6 +77,9 @@ main {
         .user {
           display: flex;
           align-items: center;
+          @media screen and (max-width: $bottom-controls-break) {
+            margin-bottom: .5em;
+          }
           h2 {
             display: inline;
             margin: 0;
