--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -13,3 +13,4 @@ $assets: '../../src/assets';
 @import './partials/_landing.scss';
 @import './partials/_navigation.scss';
 @import './partials/_index.scss';
+@import './partials/_items.scss';
