--- a/src/sass/partials/_items.scss
+++ b/src/sass/partials/_items.scss
@@ -31,5 +31,9 @@
     img {
       width: 100%;
     }
+    transition:  background-color .25s ease;
+    &:hover {
+      background-color: darken($secondary-dark, 5%);
+    }
   }
 }
