--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1045,6 +1045,7 @@ main section:nth-child(3) .bottom .controls {
 }
 
 .items .item {
+  cursor: pointer;
   text-align: center;
   -webkit-box-flex: 0;
       -ms-flex: 0 1 90px;
