--- a/src/css/app.css
+++ b/src/css/app.css
@@ -833,7 +833,7 @@ main section {
 
 @media screen and (max-width: 1200px) {
   main section {
-    height: calc(100vh - 5em);
+    height: 150vh;
   }
 }
 
