--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -14,7 +14,7 @@ main {
     flex-direction: column;
     background-color: rgba($bg, .4);
         @media screen and (max-width: $bottom-controls-break) {
-          height: calc(100vh - 5em);
+          height: 150vh;
         }
     .top,
     .bottom {
