--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -51,7 +51,7 @@ main {
     .bottom {
       .controls {
         div {
-          text-align: center;
+          text-align: left;
           // padding-top: .5em;
           select {
             font-size: 90%;
