--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -14,3 +14,5 @@ $assets: '../../src/assets';
 @import './partials/_navigation.scss';
 @import './partials/_index.scss';
 @import './partials/_items.scss';
+@import './partials/_pop-up.scss';
+@import './partials/_alert.scss';
