--- a/src/sass/variables/_variables.scss
+++ b/src/sass/variables/_variables.scss
@@ -10,6 +10,7 @@ $primary-light: lighten($primary, 20%);
 $primary-medium: lighten($primary, 10%);
 $secondary-light: lighten($secondary, 20%);
 $bg-light: lighten($bg, 25%);
+$bg-medium: lighten($bg, 15%);
 // Darkened
 $primary-dark: darken($primary, 10%);
 $secondary-dark: darken($secondary, 20%);
