--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -9,7 +9,7 @@
   letter-spacing: .1em;
   &:hover {
     background-color: $hover;
-    box-shadow: 0px 0px 10px 0px rgba(75, 15, 15, 0.75);
+    box-shadow: 0px 0px 10px 0px $primary;
   }
 }
 
@@ -27,7 +27,7 @@
   border-radius: 4px;
   &:hover {
     background-color: $hover;
-    box-shadow: 0px 0px 10px 0px rgba(75, 15, 15, 0.75);
+    box-shadow: 0px 0px 10px 0px $primary;
   }
 }
 
