--- a/src/sass/variables/_theme.scss
+++ b/src/sass/variables/_theme.scss
@@ -23,3 +23,9 @@
 .bg-secondary {
   background-color: $secondary !important;
 }
+.page-current {
+  color: $primary;
+  &:hover {
+    color: $primary-extra-light !important;
+  }
+}
