--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -12,6 +12,7 @@ $assets: '../../src/assets';
 // Partials
 @import './partials/_landing.scss';
 @import './partials/_navigation.scss';
+@import './partials/_support.scss';
 @import './partials/_index.scss';
 @import './partials/_items.scss';
 @import './partials/_pop-up.scss';
