--- a/src/sass/partials/_navigation.scss
+++ b/src/sass/partials/_navigation.scss
@@ -38,6 +38,17 @@ nav {
     flex: 1;
     display: flex;
     align-items: center;
+    li {
+      padding: 1em;
+      a {
+        padding: 1em;
+        // color: $primary-dark;
+        transition: color .25s ease;
+        &:hover {
+          color: $primary-extra-light;
+        }
+      }
+    }
     @media screen and (max-width: $nav-break) {
       display: none;
     }
@@ -51,17 +62,6 @@ nav {
         border-left: 1px solid $primary-medium;
       }
     }
-    li {
-      padding: 1em;
-      a {
-        padding: 1em;
-        // color: $primary-dark;
-        transition: color .25s ease;
-        &:hover {
-          color: $primary;
-        }
-      }
-    }
   }
   .user {
     justify-content: flex-end;
@@ -72,10 +72,17 @@ nav {
       font-size: 95%;
       padding: .5em;
       cursor: pointer;
+      transition: color .25s ease;
+      a {
+        padding: 0;
+      }
       i {
         height: 18.84px;
         font-size: 1.5em;
         margin-right: .25em;
+      }
+      &:hover {
+        color: $primary-extra-light;
       }
     }
     img {
